--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,7 @@
     name="description"
     content="Web site created using create-react-app"
     />
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Condensed:wght@700&display=swap') ;
-    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
     <link rel="apple-toucReact Apph-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Trivia</title>
